Refatoradas classes com codigos legado